Port 1.21.1 part 1. I cheat when removing errors